fixed alignment

--- a/Lesson2/css/l2large.css
+++ b/Lesson2/css/l2large.css
@@ -1,7 +1,7 @@
 /* large view-----------*/
-@media only screen and (min-width: 60em) {
-    main {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
-    }
+@media only screen and (min-width: 1280px) {
+  main {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
   }
+}
